--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.martoni</groupId>
-    <artifactId>JsfTemplateMyfaces2.2</artifactId>
+    <artifactId>GeneratePdfFromJava</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -41,7 +41,7 @@
     </dependencies>
 
     <build>
-        <finalName>jsf-template</finalName>
+        <finalName>generate_pdf</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
