--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,18 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- OpenPDF (LGPL/MPL licensed iText fork) -->
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
+        </dependency>
     </dependencies>
 
     <build>
